Fixed grid layout bug and made gameplay work with new layout

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -48,6 +48,10 @@ h1 {
 
 .row {
     text-align: center;
+    
+}
+
+.player-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
